BUG#32293797 NO NEED TO PARSE LOG TWICE IN RECV_MULTI_REC

Issue:
------
During recovery we parse every log record 2 times for all multiple
record group mini transactions.

Solution
--------
Save log record from first pass and avoid second time parsing.
8k records costs 256k memory during recovery. Got almost 2x scan/parse
improvement in local recovery from 1G redo record.

This recovery performance improvement is a contribution by
Zhai Weixiang (MySQL bug#102010).

Reviewed-by: Mateusz Rukowicz <mateusz.rukowicz@oracle.com>

RB: 25693